terr/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
    #  alb.ingress.kubernetes.io/group.name: "dev-alb-tg"
     alb.ingress.kubernetes.io/healthcheck-path: /health   
spec:
  ingressClassName: alb
  rules:
    - host: frontend.weather.com
      http:
        paths:
          - path: /update
            pathType: Prefix
            backend:
              service:
                name: djangoserv
                port:
                  number: 8000

          - path: /get
            pathType: Prefix
            backend:
              service:
                name: djangoserv
                port:
                  number: 8000

          - path: /json
            pathType: Prefix
            backend:
              service:
                name: djangoserv
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 3000

          - path: /argo
            pathType: Prefix
            backend:
              service:
                name: argocdserv
                port:
                  number: 8080
